# projectthesis

./: README.md
VisandPub/: CMakeLists.txt  KinectHelper.cpp  main.cpp  package.xml
VisandPub/include/: KinectHelper.h
calibration/: CMakeLists.txt  FindFreenect2.cmake  Libfreenect2OpenCV.cpp  main.cpp
imagesubscriber/: CMakeLists.txt  package.xml
imagesubscriber/src/: ObjectDetection.cpp
